# shortspell

./: .gitignore  CHANGELOG.md  LICENSE.html  Main.hs  README.md  shortspell.cabal
dnd/: DnDLib.hs  Gameplay.hs  Magic.hs  gameplay.hs  magic.hs  spell.hs
spelldata/: credits.md  fromjson.hs
