cabal-version:      3.0
name:               shortspell
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Shortening utility for DnD 5e spells
description: Generate brief descriptions of spells from D&D 5e, from single spells to spellbooks
             maintained and updated over time.
homepage:           https://github.com/htgiddings/shortspell

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
  -- Non-standard license Open Game Liscense 1.0a
author:             Henry T. Giddings
maintainer:         henrygiddings7@gmail.com
-- A copyright notice.
-- copyright:
category:           Game

-- Extra files to be distributed with the package, such as examples or a README.
extra-source-files:
    CHANGELOG.md
    README.md
    LICENSE.html

library
    exposed-modules:  DnDLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.14.3.0

    -- Directories containing source files.
    hs-source-dirs:   dnd

    -- Base language which the package is written in.
    default-language: Haskell2010

executable shortspell
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.14.3.0,
        shortspell

    -- Directories containing source files.
    -- hs-source-dirs:

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite shortspell-test
    -- Base language which the package is written in.
    default-language: Haskell2010

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          ShortSpellTest.hs

    -- Test dependencies.
    build-depends:    base ^>=4.14.3.0
