cabal-version:      3.0
name:               shortspell
version:            0.1.0.0
build-type:         Simple
synopsis:           Shortening utility for DnD 5e spells
description:        Generate brief descriptions of spells from D&D 5e, from single spells to
                    spellbooks maintained and updated over time.
homepage:           https://github.com/htgiddings/shortspell
bug-reports:        https://github.com/htgiddings/shortspell/issues
  -- Non-standard open source license Open Game Liscense 1.0a
license-files:      LICENSE.html
author:             Henry T. Giddings
stability:          initial development
category:           Game
tested-with:        GHC == 8.10.7
data-files:
    spelldata/std.json
extra-source-files:
    CHANGELOG.md
    README.md
extra-doc-files:
    LICENSE.html

source-repository head
  type:     git
  location: https://github.com/htgiddings/shortspell.git

library
    exposed-modules:
      Gameplay,
      Magic
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   DnD
    default-language: Haskell2010

executable importjson
    main-is:          fromjson.hs
    other-modules:
        DnD.Magic
        GHC.Generics
    other-extensions:
        DeriveGeneric
    build-depends:
        base ^>=4.14.3.0,
        shortspell
    hs-source-dirs: spelldata
    default-language: Haskell2010

executable shortspell
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.14.3.0,
        shortspell

    -- Directories containing source files.
    -- hs-source-dirs:

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite shortspell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          ShortSpellTest.hs
    build-depends:    base ^>=4.14.3.0
